# InfoSearch

./: .gitignore  CMakeLists.txt  docker-compose.yml  main.txt  plot_zipf.py
include/core/: BooleanIndex.hpp  HashMap.hpp  InvertedIndex.hpp
include/db/: MongoConnector.hpp
include/nlp/: HtmlParser.hpp  Lemmatizer.hpp  QueryParser.hpp  Tokenizer.hpp
include/ranking/: Scorer.hpp
include/utils/: Compression.hpp
parser/: config.yaml  main.py
parser/app/: db.py  spider.py
src/: main.cpp
src/db/: MongoConnector.cpp
src/ranking/: Scorer.cpp
tests/: CMakeLists.txt  CompressionTests.cpp  CoreTests.cpp  NlpTests.cpp  RankingTests.cpp
